@@ -9,6 +9,7 @@
 #include "IGUISkin.h"
 #include "rect.h"
 #include "EMessageBoxFlags.h"
+#include "EFocusFlags.h"
 #include "IEventReceiver.h"
 #include "IXMLReader.h"
 #include "path.h"
@@ -262,9 +263,8 @@ public:
 	\param modal Defines if the dialog is modal. This means, that all other
 	gui elements which were created before the message box cannot be used
 	until this messagebox is removed.
-	\param flags Flags specifying the layout of the message box. For example
-	to create a message box with an OK and a CANCEL button on it, set this
-	to (EMBF_OK | EMBF_CANCEL).
+	\param flags Flags specifying the layout of the message box using ::EMESSAGE_BOX_FLAG.
+	Create a message box with an OK and CANCEL button for example with (EMBF_OK | EMBF_CANCEL).
 	\param parent Parent gui element of the message box.
 	\param id Id with which the gui element can be identified.
 	\param image Optional texture which will be displayed beside the text as an image
@@ -619,6 +619,17 @@ public:
 	\param group When true it will search for the next tab-group (like ctrl+tab)
 	*/
 	virtual IGUIElement* getNextElement(bool reverse=false, bool group=false) = 0;
+
+	//! Set the way the gui will handle automatic focus changes
+	/** The default is (EFF_SET_ON_LMOUSE_DOWN | EFF_SET_ON_TAB).
+	with the left mouse button.
+	This does not affect the setFocus function itself - users can still call that whenever they want on any element.
+	\param flags A bitmask which is a combination of ::EFOCUS_FLAG flags.*/
+	virtual void setFocusBehavior(u32 flags) = 0;
+
+	//! Get the way the gui does handle focus changes
+	/** \returns A bitmask which is a combination of ::EFOCUS_FLAG flags.*/
+	virtual u32 getFocusBehavior() const = 0;
 };
 
 
